--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ position: relative;
 width: 1600px;
 height: 1200px;
 
-background: #93459F;
+background: #9546a1;
 }
 
 .App-logo {
@@ -35,16 +35,7 @@ background: #93459F;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-    
-  }
+.fondo img{
+  width: 100%;
+  height: 100%;
 }
