--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,12 @@ background: #9546a1;
   width: 100%;
   height: 100%;
 }
+.fondo{
+  background-image: url('../src/assets/img/portada2.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.logo{
+  width: 10%;
+  direction: initial;
+}
