--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@ background: #9546a1;
   color: white;
 }
 
-.fondo img{
+/* .fondo img{
   width: 100%;
   height: 100%;
 }
@@ -53,4 +53,4 @@ footer{
   bottom: 0;
   align-items: center;
   width: 100%;
-}
+} */
