--- a/src/components/Styles/MainStyle.css
+++ b/src/components/Styles/MainStyle.css
@@ -1,18 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,500&display=swap');
-.fondo {
-        width: 100%;
-        height: 100%;
-  background-image: url('../../assets/img/tartafloresverdes.jpeg');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,500&display=swap");
+
+.portada {
+  height: 100vh;
+  width: 100%;
+  background-image: url("../../assets/img/tartafloresverdes.jpeg");
   background-repeat: no-repeat;
-   background-size: cover;
-   position: relative;
-   display: flex;
-  }
-  
-.footer{
+  background-size: cover;
+  text-align: center;
+  position: relative;
+}
+
+.footer {
   position: absolute;
   bottom: 0;
-  align-items: center;
-  width: 50%;
-  margin-top: 0;
+  width: 100%;
+  height: 20px;
+  color: white;
 }
