--- a/src/components/Styles/MainStyle.css
+++ b/src/components/Styles/MainStyle.css
@@ -1,13 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,500&display=swap");
-
+@import url('https://fonts.googleapis.com/css2? family= Kanit & family= Open+Sans:ital,wght@1,500 & display=swap');
+*{
+  font-family: sans-serif;
+  
+}
 .portada {
   height: 100vh;
   width: 100%;
-  background-image: url("../../assets/img/tartafloresverdes.jpeg");
+  background-image: url("../../assets/img/portada2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
   position: relative;
+  
 }
 
 .footer {
@@ -16,4 +21,44 @@
   width: 100%;
   height: 20px;
   color: white;
+  
+}
+.historia{
+border-radius: 5px;
+justify-content: center;
+z-index: 1;
+width: 540px;
+height: 440px;
+padding: 20px 20px;
+font-size: 15px;
+line-height: 1.5;
+background-color: aliceblue;
+}
+.historia p{
+  justify-content: center;
+  width: 540px;
+  height: 440px;
+  padding: 20px 20px;
+  color: black;
+ font-size: 15px;
+ line-height: 1.5;
+ background-color: aliceblue;
+ box-shadow: 1px 5px 25px rgba(0,0,0,0.45);
+ border-radius: 5px;
+}
+ .historia img{
+  width: 310px;
+  border-radius: 5px;
+  float: left;
+  margin-right: 15px;
+ }
+  
+
+.capa{
+  border-radius: 5px;
+  width: 50vw;
+  height: 75vh;
+  opacity: 0.7;
+  display: flex;
+  justify-content: center;
 }
