--- a/src/components/Styles/MainStyle.css
+++ b/src/components/Styles/MainStyle.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2? family= Kanit & family= Open+Sans:ital,wght@1,500 & display=swap');
 *{
   font-family: sans-serif;
-  
+  margin: 0;
 }
 .portada {
   height: 100vh;
@@ -15,14 +15,7 @@
   
 }
 
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 20px;
-  color: white;
-  
-}
+
 .historia{
 border-radius: 5px;
 justify-content: center;
@@ -33,9 +26,13 @@ padding: 20px 20px;
 font-size: 15px;
 line-height: 1.5;
 background-color: aliceblue;
+justify-items: center;
+
 }
+
+
 .historia p{
-  justify-content: center;
+  justify-content: right;
   width: 540px;
   height: 440px;
   padding: 20px 20px;
@@ -45,20 +42,30 @@ background-color: aliceblue;
  background-color: aliceblue;
  box-shadow: 1px 5px 25px rgba(0,0,0,0.45);
  border-radius: 5px;
+ align-content: right;
 }
- .historia img{
-  width: 310px;
+  .foto{
+  width: 450px;
   border-radius: 5px;
-  float: left;
-  margin-right: 15px;
+  float: right;
+  margin-left: 15px;
  }
   
 
 .capa{
   border-radius: 5px;
-  width: 50vw;
+  width: 100vw;
   height: 75vh;
   opacity: 0.7;
   display: flex;
   justify-content: center;
+} 
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 20px;
+  color: white;
+  
 }
