--- a/src/components/Styles/MainStyle.css
+++ b/src/components/Styles/MainStyle.css
@@ -3,15 +3,16 @@
 *{
   font-family: sans-serif;
   margin: 0;
+  box-sizing: border-box;
 }
 .portada {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   background-image: url("../../assets/img/portada2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
-  position: relative;
+  position: absolute;
   
 }
 
@@ -65,7 +66,7 @@ justify-items: center;
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 20px;
+  height: 10px;
   color: white;
   
 }
