--- a/src/components/Styles/MainStyle.css
+++ b/src/components/Styles/MainStyle.css
@@ -3,70 +3,23 @@
 *{
   font-family: sans-serif;
   margin: 0;
-  box-sizing: border-box;
+  padding: 0;
+  
 }
 .portada {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw; 
   background-image: url("../../assets/img/portada2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
   text-align: center;
-  position: absolute;
+  position: relative;
   
 }
 
-
-.historia{
-border-radius: 5px;
-justify-content: center;
-z-index: 1;
-width: 540px;
-height: 440px;
-padding: 20px 20px;
-font-size: 15px;
-line-height: 1.5;
-background-color: aliceblue;
-justify-items: center;
-
-}
-
-
-.historia p{
-  justify-content: right;
-  width: 540px;
-  height: 440px;
-  padding: 20px 20px;
-  color: black;
- font-size: 15px;
- line-height: 1.5;
- background-color: aliceblue;
- box-shadow: 1px 5px 25px rgba(0,0,0,0.45);
- border-radius: 5px;
- align-content: right;
-}
-  .foto{
-  width: 450px;
-  border-radius: 5px;
-  float: right;
-  margin-left: 15px;
- }
-  
-
-.capa{
-  border-radius: 5px;
-  width: 100vw;
-  height: 75vh;
-  opacity: 0.7;
-  display: flex;
-  justify-content: center;
-} 
-
-.footer {
+.footer{
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 10px;
-  color: white;
-  
 }
