--- a/src/components/Formulario.css
+++ b/src/components/Formulario.css
@@ -1,22 +1,26 @@
 
 
+
 .formulario{
     display: flex;
     width: 550px;
+    max-width: 75em;
+    height: 100vh;
     margin: auto;
     background: rgba(0, 0, 0, 0.3);
     padding: 10px 20px;
     box-sizing: border-box;
-    margin-bottom: -40px;
-    border-radius: 20px;
-    
+    border-radius: 10px;
+    margin-top: -40px;
+    font-size: 16px; 
 }
 .texto {
     color: white;
-   
+    
 }
 .Input{
     width: 100%;
+    
 }
 .textarea{
     width: 100%; 
