--- a/src/components/Formulario.css
+++ b/src/components/Formulario.css
@@ -1,31 +1,45 @@
 
 
+*{
+    margin: 0;
+    font-size: 12px;
+}
 
 .formulario{
-    display: flex;
-    width: 550px;
+    display: grid;
+  gap:1;
+  height:200px;
+  grid-template-columns: 150px, 1fr; 
+grid-template-rows: 50px 1fr 30px; 
+    width: 450px;
     max-width: 75em;
-    height: 100vh;
+    height: 70vh;
     margin: auto;
     background: rgba(0, 0, 0, 0.3);
     padding: 10px 20px;
     box-sizing: border-box;
     border-radius: 10px;
     margin-top: -40px;
-    font-size: 16px; 
+    
 }
 .texto {
     color: white;
+   
     
 }
 .Input{
     width: 100%;
-    
 }
+    
+ .name{
+    color: white;
+   }
+
 .textarea{
     width: 100%; 
 }
 .footer{
-    width: 100%;
+    position: absolute;
     bottom: 0;
+    width: 100%;
 }
