--- a/src/components/QuieneStyle.css
+++ b/src/components/QuieneStyle.css
@@ -30,10 +30,13 @@
      align-content: right;
      
     }
-      
-      
     
     .capa{
+      display: grid;
+  gap:1;
+  height:200px;
+  grid-template-columns: 150px, 1fr; 
+grid-template-rows: 50px 1fr 30px; 
       border-radius: 5px;
       width: 100vw;
       
