--- a/src/components/Styles/MainStyle.css
+++ b/src/components/Styles/MainStyle.css
@@ -14,13 +14,43 @@
 grid-template-rows: 50px 1fr 30px; 
   height: 100vh;
   width: 100vw; 
+  position: relative;
   background-image: url("../../assets/img/portada2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
   
 }
+.contenedor{
+  position: relative;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
 
+}
+
+.formulario{
+  /* width: 50%; */
+  width: auto;
+  height: auto;
+
+  align-items: left;
+
+}
+.ico{
+  align-content: center;
+}
+.info{
+  /* width: 50%; */
+  border-radius: 10px;
+  background-color: aliceblue;
+  /* padding: 5px 5px 5px;
+  margin-bottom: 0;
+  
+  margin-top: -40px; */
+}
 .footer{
   position: absolute;
   bottom: 0;
