--- a/src/components/Formulario.css
+++ b/src/components/Formulario.css
@@ -10,7 +10,7 @@
 .formulario{
     
     width: 450px;
-    /* max-width: 75em; */
+    max-width: 75em;
     min-height: 70vh;
     margin: auto;
     background: rgba(0, 0, 0, 0.3);
@@ -19,6 +19,10 @@
     border-radius: 10px;
     margin-top: -40px;
     
+}
+.pedido{
+    color: aliceblue;
+    text-align: center;
 }
 .texto {
     color: white;
