--- a/src/components/Formulario.css
+++ b/src/components/Formulario.css
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-size: 12px; 
+    font-size: 10px; 
 }
 
 .formulario{
@@ -35,18 +35,18 @@
     display: flex;
     font-family: 'Carter One', cursive;
     font-size: 50px;
-    align-items: center;
-    background: black;
+    text-align: center;
+    background: rgb(71, 146, 153);
     
 }
 h1{
-    font-size: 3rem;
-    position: absolute;
+    font-size: 2rem;
+    position: relative;
     margin-left: 10;
     
 }
 .border{
-    color: black;
+    color: rgb(249, 249, 249);
     text-shadow: -1px -1px 0 white,
                  1px -1px 0 white,
 
