--- a/src/components/Formulario.css
+++ b/src/components/Formulario.css
@@ -2,19 +2,18 @@
 
 *{
     margin: 0;
-    padding: 0;
     box-sizing: border-box;
     font-size: 10px; 
 }
 
-.formulario{
+.formulario-ori{
     
     width: 450px;
     max-width: 75em;
     min-height: 70vh;
     margin: auto;
     background: rgba(0, 0, 0, 0.3);
-    padding: 10px 20px;
+    padding: 5px 10px;
     box-sizing: border-box;
     border-radius: 10px;
     margin-top: -40px;
@@ -31,25 +30,16 @@
     color: white;
      
 }
-.titulo{
+
+.border{
     display: flex;
     font-family: 'Carter One', cursive;
     font-size: 50px;
     text-align: center;
-    background: rgb(71, 146, 153);
-    
-}
-h1{
-    font-size: 2rem;
-    position: relative;
-    margin-left: 10;
-    
-}
-.border{
     color: rgb(249, 249, 249);
+    background:none;
     text-shadow: -1px -1px 0 white,
-                 1px -1px 0 white,
-
+                 1px -1px 0 white,            
 }
 .Input{
     width: 100%;
@@ -75,4 +65,7 @@ h1{
 .boton:hover{
     background-color: aquamarine;
     
+}
+.error{
+    color: red;
 }
