--- a/src/components/QuieneStyle.css
+++ b/src/components/QuieneStyle.css
@@ -1,10 +1,28 @@
 .portada{
-  display:flex ;
-  flex-direction: column;
-  min-height: 100vh;
+  display: grid;
+  gap:1;
+  /* height:200px; */
+  margin: 0;
+  height: 100%;
+  width: 100vw; 
+  position: absolute;
+  background-image: url("../assets/img/portada2.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  
 }
-.portada > * {
-padding: 20px;
+@media (max-width: 500px) {
+  .portada{
+    flex-direction: column;
+  }
+}
+
+.header-quien{
+  display: flex;
+  width: 100%;
+  margin-top: 0px;
+  margin-bottom: 50px;
 }
 .historia{
     border-radius: 5px;
@@ -12,13 +30,20 @@ padding: 20px;
     z-index: 1;
     width: 540px;
     height: 370px;
-    padding: 20px 20px;
+    padding: 10px 10px;
     font-size: 15px;
     line-height: 1.5;
     background-color: aliceblue;
     justify-items: center;
-    margin: top -100px; ;
+    margin: top -150px; 
+    padding: 35px;
     }
+    .foto{
+      margin-top: 0px;
+      width: auto;
+      
+    }
+    
     
     
     .historia p{
@@ -31,27 +56,56 @@ padding: 20px;
      font-size: 15px;
      line-height: 1.5;
      background-color: aliceblue;
-     box-shadow: 1px 5px 25px rgba(0,0,0,0.45);
+     box-shadow: 1px 5px 10px rgba(0,0,0,0.45);
      border-radius: 5px;
      align-content: right;
-     margin-top: -40px;
+     margin-top: -20px;
     }
     
     .capa{
-      
- flex-grow: 1;
-  height:200px;
+      /* width: 100vw;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 68px;
+    justify-content: space-around; */
+ /* flex-grow: 1; */
+  /* height:200px; */
   /* grid-template-columns: 150px, 1fr; 
 grid-template-rows: 50px 1fr 30px;  */
       border-radius: 5px;
       width: 100vw;
-      height: 75vh;
-      display: flex; 
-      justify-content: center;
-      margin-top: -40px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 0px;
+    justify-content: space-around;
+      
     } 
-    .footer{
-    position: absolute;
+    .contenido{
+      width: 100vw;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 80px;
+    justify-content: space-around;
+    }
+    @media  (max-width: 800px) {
+      .capa{
+        flex-direction: column;
+        font-size: 5px;
+      }
+    }
+    
+    
+    .pie{
+      
+    position: fixed;
+    left: 0;
     bottom: 0;
     width: 100%;
-    }
+      }
+    
