--- a/src/components/Styles/MainStyle.css
+++ b/src/components/Styles/MainStyle.css
@@ -8,13 +8,13 @@
   padding: 0;
   
 }
-.portada {
+.portada-ini {
   display: grid;
   gap:1;
   /* height:200px; */
   grid-template-columns: 150px, 1fr;  
 grid-template-rows: 50px 1fr 30px; 
-  height: 100%;
+  height: 100vh;
   width: 100vw; 
   position: relative;
   background-image: url("../../assets/img/portada2.jpg");
@@ -24,7 +24,7 @@ grid-template-rows: 50px 1fr 30px;
   
 }
 .body{
-  height: 100%;
+  height: 100vh;
 }
 .footer{
   padding: 0;
