--- a/src/components/Contacto.css
+++ b/src/components/Contacto.css
@@ -1,46 +1,52 @@
-.portada{
-  margin-bottom: 0;
-  height: 100%;
+.portada-ini { 
+  height: 100vh;
   width: 100vw; 
   position: relative;
-  margin: 0;
-  /* background-size: cover;
-  background-attachment: fixed; */
+  background-image: url("../assets/img/portada2.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
   
 }
-/* @media(max-width:800px){
-  .portada{
-    flex-direction: column;
-  }
-} */
-
-.contenedor{
-    width: 100vw;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 80px;
-    justify-content: space-around;
-  }
-  @media  (max-width: 800px) {
-    .contenedor{
-      flex-direction: column;
-    }
-  }
-  .footer{
+.body{
+  display: flex;
+  justify-content: space-between;
+  justify-content:space-around;
+  height: 74vh;
+}
+.capa{
+  border-radius: 5px;
+  width: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 0px;
+  justify-content: space-around;
+  padding: 20px 20px; 
+  } 
+.footer{
+  padding: 0;
+    width: 100%;
     position: relative;
     margin-bottom: 0;
-    width: 100%;
-    }
+}
     .formulario{
-      margin-bottom: 35px;
+      margin-top: 20px;
       padding: 20px;
     }
     .info{
-      
+      margin-top: 20px;
       padding: 35px;
     }
-    .header-cont{
-      width: 100%;
+    
+  @media  (max-width: 800px) {
+    .portada-ini{
+      flex-direction: column;
     }
+  }
+  @media  (max-width: 800px) {
+    .body{
+      flex-direction: column;
+    }
+  }
