--- a/src/components/QuieneStyle.css
+++ b/src/components/QuieneStyle.css
@@ -1,7 +1,5 @@
-.portada{
-  margin-bottom: 0;
-  margin: 0;
-  height: 100%;
+.portada-ini { 
+  height: 100vh;
   width: 100vw; 
   position: relative;
   background-image: url("../assets/img/portada2.jpg");
@@ -10,14 +8,23 @@
   background-attachment: fixed;
   
 }
-/* @media (max-width: 800px) {
-  .portada{
-    flex-direction: column;
-  }
-} */
-
-
-.historia{
+.body{
+  display: flex;
+  justify-content: space-between;
+  justify-content:space-around;
+  height: 74vh;
+  
+      
+}
+.footer{
+  padding: 0;
+    width: 100%;
+    position: relative;
+    margin-bottom: 0;
+}
+    .info{
+    margin-top: 20px;
+    padding: 35px;
     border-radius: 5px;
     justify-content:justify;
     z-index: 1;
@@ -28,9 +35,8 @@
     line-height: 1.5;
     background-color: aliceblue;
     justify-items: center;
-    margin: top -100px; 
     margin-bottom: 50px;
-    padding: 35px;
+    
     }
     .foto{
       margin-bottom: 35px;
@@ -38,8 +44,7 @@
       width: auto;
     }
     
-    
-    .historia p{
+    .info p{
       justify-content: right;
       float: right;
       width: 540px;
@@ -56,19 +61,8 @@
     }
     
     .capa{
-      /* width: 100vw;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 68px;
-    justify-content: space-around; */
- /* flex-grow: 1; */
-  /* height:200px; */
-  /* grid-template-columns: 150px, 1fr; 
-grid-template-rows: 50px 1fr 30px;  */
-      border-radius: 5px;
-      width: 100%;
+    border-radius: 5px;
+    width: 100%;
     position: relative;
     display: flex;
     justify-content: center;
@@ -77,27 +71,22 @@ grid-template-rows: 50px 1fr 30px;  */
     justify-content: space-around;
       
     } 
-    .contenido{
-      width: 100vw;
-      position: relative;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-top: 80px;
-      justify-content: space-around;
-    }
+    
     @media  (max-width: 800px) {
       .capa{
         flex-direction: column;
         
       }
     }
-    
-    
-    .pie{
       
-      position: relative;
-      margin-bottom: 0;
-      width: 100%;
-      }
+  @media  (max-width: 800px) {
+    .portada-ini{
+      flex-direction: column;
+    }
+  }
+  @media  (max-width: 800px) {
+    .body{
+      flex-direction: column;
+    }
+  }
     
