--- a/src/components/pages/MainStyle.scss
+++ b/src/components/pages/MainStyle.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2? family= Kanit & family= Open+Sans:ital,wght@1,500 & display=swap');
 
 
-.portada-ini { 
+.portada { 
   height: 100vh;
   width: 100vw; 
   position: relative;
@@ -20,6 +20,33 @@
     width: 100%;
     position: relative;
     margin-bottom: 0;
+}
+.info p{
+  background-color: aliceblue;
+  padding: 20px 20px;
+  border-radius: 10px;
+  width: 400px;
+  height: 400px;
+  font-size: 14px;
+  
+}
+.formulario{
+  width: 400px;
+  margin-top: 37px;
+}
+
+// .info-cont{
+  
+//   padding: 20px 20px;
+//   border-radius: 10px;
+//   width: 400px;
+//   height: 400px;
+//   font-size: 14px;
+// }
+.body-inf{
+  display: flex;
+  justify-content:space-around;
+  
 }
 @media  (max-width: 800px) {
   .portada-ini{
