--- a/src/components/pages/styles.scss
+++ b/src/components/pages/styles.scss
@@ -1,15 +1,17 @@
 
-.container{
-   background-color: aqua;
-}
-body{
-  background:#eee;
+
+.body{
+  
   position:relative;
   width:100%;
-  height:100vh;
   font-family: 'Martel', serif;
   overflow: hidden;
+  display: flex;
+  justify-content: space-between;
+  justify-content:space-around;
+  height: 74vh;
 }
+
 .swiper-slide{
   background-position: center;
   background-size:cover;
