--- a/src/components/pages/productos.css
+++ b/src/components/pages/productos.css
@@ -2,6 +2,8 @@
     margin: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
+    background-color: darkgoldenrod;
+    
   }
   
   .card:hover {
@@ -15,5 +17,16 @@
   
   .card-body {
     text-align: center;
+    
   }
-  
+  .card-text{
+    font-family: 'Carter One', cursive;
+  }
+  .card-title{
+    font-family: 'Carter One', cursive;
+  }
+  .titulo-p{
+    font-family: 'Carter One', cursive;
+    font-size: 30px;
+    text-align: center;
+  }
