--- a/src/components/pages/MainStyle.scss
+++ b/src/components/pages/MainStyle.scss
@@ -2,24 +2,35 @@
 @import url('https://fonts.googleapis.com/css2? family= Kanit & family= Open+Sans:ital,wght@1,500 & display=swap');
 
 
-.portada { 
+.container { 
   height: 100vh;
-  width: 100vw; 
-  position: relative;
-  background-image: url("../../assets/img/portada2.jpg");
+  width: 100%; 
+  background-image: url("../../assets/img/fondo.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  
+  display: flex;
+  flex-direction: column;
+  padding: 0;
 }
 .body{
-  height: 74vh;
+  margin: 1em;
+  min-height: 77.6vh;
+  padding: 1em;
+  grow: 1;
+
 }
+.cabecera{
+  height: 10em;
+}
+
 .footer{
-  padding: 0;
-    width: 100%;
-    position: relative;
-    margin-bottom: 0;
+  
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  
+  height: 10em;
 }
 .info p{
   background-color: aliceblue;
