--- a/src/components/pages/MainStyle.scss
+++ b/src/components/pages/MainStyle.scss
@@ -1,81 +1,84 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,500&display=swap");
 @import url('https://fonts.googleapis.com/css2? family= Kanit & family= Open+Sans:ital,wght@1,500 & display=swap');
 
+// .image-row {
+//   height: 80vh; /* ajusta este valor para obtener la altura deseada */
+// }
 
-.container { 
-  height: 100vh;
-  width: 100%; 
-  background-image: url("../../assets/img/fondo.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  display: flex;
-  flex-direction: column;
-  padding: 0;
-}
-.body{
-  margin: 1em;
-  min-height: 77.6vh;
-  padding: 1em;
-  grow: 1;
+// .container { 
+//   height: 100vh;
+//   width: 100%; 
+//   background-image: url("../../assets/img/fondo.jpg");
+//   background-repeat: no-repeat;
+//   background-size: cover;
+//   background-attachment: fixed;
+//   display: flex;
+//   flex-direction: column;
+//   padding: 0;
+// }
+// .body{
+//   margin: 1em;
+//   min-height: 77.6vh;
+//   padding: 1em;
+  
 
-}
-.cabecera{
-  height: 10em;
-}
+// }
+// .cabecera{
+//   height: 10em;
+// }
 
-.footer{
+// .footer{
   
-  position: fixed;
-  bottom: 0;
-  width: 100%;
+//   position: fixed;
+//   bottom: 0;
+//   width: 100%;
   
-  height: 10em;
-}
-.info p{
-  background-color: aliceblue;
-  padding: 20px 20px;
-  border-radius: 10px;
-  width: 400px;
-  height: 400px;
-  font-size: 14px;
-  
-}
-.formulario{
-  width: 400px;
-  margin-top: 37px;
-}
-
-// .info-cont{
-  
+//   height: 10em;
+// }
+// .info p{
+//   background-color: aliceblue;
 //   padding: 20px 20px;
 //   border-radius: 10px;
 //   width: 400px;
 //   height: 400px;
 //   font-size: 14px;
-// }
-.body-inf{
-  display: flex;
-  justify-content:space-around;
   
-}
-@media  (max-width: 800px) {
-  .portada-ini{
-    flex-direction: column;
-  }
-}
-@media  (max-width: 800px) {
-  .body{
-    flex-direction: column;
-  }
-}
-@media (max-width: 800px) {
-  .footer{
-    flex-direction: column;
-  }
-}
-@media (max-width: 800px) {
-  .cabecera{
-    flex-direction: column;
-  }
-}
+// }
+// .formulario{
+//   width: 400px;
+//   margin-top: 37px;
+// }
+
+// // .info-cont{
+  
+// //   padding: 20px 20px;
+// //   border-radius: 10px;
+// //   width: 400px;
+// //   height: 400px;
+// //   font-size: 14px;
+// // }
+// .body-inf{
+//   display: flex;
+//   justify-content:space-around;
+  
+// }
+// @media  (max-width: 800px) {
+//   .portada-ini{
+//     flex-direction: column;
+//   }
+// }
+// @media  (max-width: 800px) {
+//   .body{
+//     flex-direction: column;
+//   }
+// }
+// @media (max-width: 800px) {
+//   .footer{
+//     flex-direction: column;
+//   }
+// }
+// @media (max-width: 800px) {
+//   .cabecera{
+//     flex-direction: column;
+//   }
+// }
